--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -114,6 +114,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fly",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
@@ -128,6 +129,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="TurnRate",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Z)
++AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
