--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -118,6 +118,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +ActionMappings=(ActionName="Roll",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="UltimateAbility",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
