Sword random spawn works --need to change the spawning of items to back inside the loot table class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Game/Wayfinder_LevelOne_Cave.Wayfinder_LevelOne_Cave
-EditorStartupMap=/Game/Game/Wayfinder_LevelOne_Cave.Wayfinder_LevelOne_Cave
+GameDefaultMap=/Game/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Game/Maps/Wayfinder_LevelOne_Cave.Wayfinder_LevelOne_Cave
 GlobalDefaultGameMode="/Script/WayFinder.WayFinderGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
