--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -135,7 +135,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="TurnRate",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="Zoomie",Scale=-1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="Mouse Wheel Scroll Input",Scale=-1.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
